--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nejcropic.github.io/pos_stojalo_website",
+  "homepage": "https://brecelj-pos.eu",
   "name": "lan_website",
   "version": "0.1.0",
   "private": true,
