--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://brecelj-pos.eu",
+  "homepage": "https://www.brecelj-pos.eu/",
   "name": "lan_website",
   "version": "0.1.0",
   "private": true,
